# ClawDock

./: .gitignore  LICENSE  README.md  README_CN.md  build.ps1
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: design.md
installer/: setup.iss
src/ClawDock/: App.xaml  App.xaml.cs  ClawDock.csproj
src/ClawDock/Services/: GatewayService.cs  InstallStateService.cs  OpenClawConfigService.cs  OpenClawService.cs  UninstallService.cs  WslService.cs
src/ClawDock/Views/: InstallWindow.xaml  InstallWindow.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  UninstallWindow.xaml  UninstallWindow.xaml.cs
src/OpenClawApp/: App.xaml  App.xaml.cs  GlobalUsings.cs  OpenClawApp.csproj
src/OpenClawApp/Services/: GatewayService.cs  InstallStateService.cs  OpenClawService.cs  UninstallService.cs  WslService.cs
src/OpenClawApp/Views/: InstallWindow.xaml  (+5 more)
src/tauri-app/: components.json  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
src/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src/tauri-app/src-tauri/capabilities/: main.json
src/tauri-app/src-tauri/icons/: icon.icns
src/tauri-app/src-tauri/src/: lib.rs  main.rs
src/tauri-app/src-tauri/src/commands/: config.rs  gateway.rs  install.rs  mod.rs  system.rs
src/tauri-app/src-tauri/src/platform/: mod.rs  unix.rs  windows.rs
src/tauri-app/src-tauri/src/services/: config_service.rs  gateway_service.rs  install_state.rs  mod.rs  openclaw_service.rs  shell_backend.rs  wsl_service.rs
(+23 files in other folders)
