[package]
name = "clawdock"
version = "0.8.0-alpha"
description = "Cross-platform OpenClaw Manager"
authors = ["ClawDock"]
edition = "2021"

[lib]
name = "clawdock_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "unstable"] }
tauri-plugin-shell = "2"
tauri-plugin-autostart = "2"
tauri-plugin-os = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
reqwest = { version = "0.12", features = ["json"] }
dirs = "6"
thiserror = "2"
regex = "1"
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.55"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
